Update splash image, farcaster.json, and index.html for Farcaster Mini App compatibility

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+<!-- head content -->
+    <meta name="fc:miniapp" content='{"version":"next","imageUrl":"https://flag-fiesta.vercel.app/icon.png","button":{"title":"🚩 Start","action":{"type":"launch_miniapp","name":"FlagFiesta!","url":"https://flag-fiesta.vercel.app","splashImageUrl":"https://flag-fiesta.vercel.app/splash.png","splashBackgroundColor":"#f5f0ec"}}}' />
+
+<!-- For backward compatibility -->
+    <meta name="fc:frame" content='{"version":"next","imageUrl":"https://flag-fiesta.vercel.app/splash.png","button":{"title":"🚩 Start","action":{"type":"launch_frame","name":"FlagFiesta!","url":"https://flag-fiesta.vercel.app","splashImageUrl":"https://flag-fiesta.vercel.app/splash.png","splashBackgroundColor":"#f5f0ec"}}}' />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>MemeCoin Survivor</title>
   <link rel="stylesheet" href="style.css" />
